@@ -61,7 +61,7 @@ LY_DEFINE (ly_option_usage, "ly:option-usage", 0, 0, 0, (SCM),
   puts ("");
   printf (_("  The function ly:set-option allows for access to some internal variables.").to_str0 ());
   puts ("\n");
-  printf (_ ("Usage: lilypond-bin -e \"(ly-set-option SYMBOL VAL)\"").to_str0 ());
+  printf (_ ("Usage: lilypond-bin -e \"(ly:set-option SYMBOL VAL)\"").to_str0 ());
   puts ("\n");
   printf (_ ("Use help as  SYMBOL to get online help.").to_str0 ());
 
@@ -100,13 +100,13 @@ LY_DEFINE (ly_set_option, "ly:set-option", 1, 1, 0, (SCM var, SCM val),
 "@end table\n"
 "\n"
 "This function is useful to call from the command line: @code{lilypond -e\n"
-"\"(ly-set-option 'midi-debug #t)\"}.\n")
+"\"(ly:set-option 'midi-debug #t)\"}.\n")
 {
   if (val == SCM_UNDEFINED)
     val = SCM_BOOL_T;
 
   if (var == ly_symbol2scm ("help"))
-    /* lilypond -e "(ly-set-option 'help #t)" */
+    /* lilypond -e "(ly:set-option 'help #t)" */
     ly_option_usage (SCM_EOL);
   else if (var == ly_symbol2scm ("midi-debug"))
     midi_debug_global_b = to_boolean (val);
