@@ -1,5 +1,12 @@
 2004-07-19  Jan Nieuwenhuizen  <janneke@gnu.org>
 
+	* lily/slur-quanting.cc (score_extra_encompass): Bigger penalty
+	for and bigger y-padding for extra_encompass.  Fixes slur-script.ly.
+
+	* po/nl.po: Update.
+
+	* lily/main.cc: Fix ly:option-usage help.
+
 	* input/regression/slur-script.ly: More collision tests.
 
 	* GNUmakefile.in (EXTRA_DIST_FILES): Add SConstruct.
